--- a/css/style.css
+++ b/css/style.css
@@ -32,68 +32,53 @@ body {
 /*-------------------------------------
  2. Header
 --------------------------------------*/
-.main-content {
+.wrapper {
   display: grid;
   background-image: url(../img/header.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   grid-template-columns: auto;
-  grid-template-rows: repeat(3, auto);
+  grid-template-rows: auto 1fr auto;
   grid-template-areas:
-    "header logo"
-    "main main"
-    "footer footer";
+    "header"
+    "main"
+    "footer";
   min-width: 100vw;
   min-height: 100vh;
 }
-header {
+
+.header {
+  border-bottom: solid 0.1rem #ffffff;
+  align-items: flex-end;
   grid-area: header;
 }
+/* 
+header { */
+/*   grid-area: header; */
+
+/*   display: flex; */
+/*   flex-direction: row-reverse; */
+/*   align-items: flex-end; */
+/*   justify-content: space-between; */
+/* } */
 
 main {
   grid-area: main;
+  justify-content: center;
+  display: flex;
 }
 
 .logo {
   max-width: 300px;
   max-height: 170px;
-  grid-area: logo;
   justify-self: end;
 }
 
 .welcome {
   font-family: "Style Script";
   color: #fff;
-  align-self: center;
-  justify-self: center;
   font-size: clamp(2rem, 5vw, 5rem);
-}
-
-.header-links {
-  justify-self: end;
-  background-size: contain;
-  padding: 1rem;
-}
-
-.filters a,
-.header-links a {
-  text-decoration: none;
-  color: #fff;
-  border: solid 0.1rem #ffffff;
-  padding: 1px 10px 1px 10px;
-  background-color: #000000cb;
-  font-size: clamp(1rem, 2vw, 2rem);
-  transition-duration: 0.4s;
-}
-
-:where(.header-links, .menu-header, .welcome) {
-  background-image: url(../img/brush.png);
-}
-
-.menu-header a:hover,
-.header-links a:hover {
-  background-color: #ffffff7a;
 }
 
 /*-------------------------------------
@@ -106,6 +91,21 @@ main {
 
 .filters {
   margin-bottom: 20px;
+  justify-content: center;
+  display: flex;
+  gap: 1rem;
+}
+.filters a {
+  color: #ffffff;
+  font-size: clamp(1rem, 2vw, 2rem);
+  border: solid 1px rgb(255, 255, 255);
+  background-color: #000000;
+  padding: 0.5rem;
+  border-radius: 10px;
+}
+
+.filters a:hover {
+  background-color: #ffffff7a;
 }
 
 .filters button {
@@ -124,13 +124,24 @@ main {
   background-color: #c9302c;
 }
 
-.menu-section {
+.menu-content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
   max-width: 1000px;
-  margin: auto;
+  grid-template-areas:
+    "header"
+    "menu-container";
+  margin: 1.5rem;
 }
+.menu-container {
+  grid-area: menu-container;
+}
+
+.menu-header {
+  grid-area: header;
+}
+
 .menu-item {
   background: white;
   padding: 15px;
@@ -144,8 +155,8 @@ main {
 }
 
 .menu-item img {
-  width: 100%;
-  height: 150px;
+  width: 50px;
+  height: 50px;
   object-fit: cover;
   border-radius: 10px;
 }
@@ -168,15 +179,50 @@ main {
 }
 
 /*-------------------------------------
- . NAV  // Hamburgerstyle
+ . Navigaton menu
 --------------------------------------*/
 
-.off-screen-menu {
-  font-size: 1.5rem;
-  transition: 0.3s ease;
+.navigation a:hover {
+  background-color: #ffffff7a;
 }
 
-.off-screen-menu.active {
+.navigation {
+  font-size: 1.5rem;
+  transition: 0.3s ease;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.navigation li {
+  list-style: none;
+}
+
+.navigation li a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.navigation li a:hover {
+  color: #203239;
+}
+.navigation ul {
+  gap: 0.5rem;
+  display: flex;
+}
+
+.navigation a {
+  text-decoration: none;
+  color: #fff;
+  border: solid 0.1rem #ffffff;
+  padding: 1px 10px 1px 10px;
+  background-color: #000000cb;
+  font-size: clamp(1rem, 2vw, 2rem);
+  transition-duration: 0.4s;
+  justify-content: center;
+  display: flex;
+}
+
+.navigation.active {
   width: 50%;
   height: 100%;
   left: 0;
@@ -194,9 +240,7 @@ main {
   width: 40px;
   position: relative;
   display: none;
-  align-self: end;
-  justify-self: center;
-  grid-area: 3 / 1 / 4 / 2;
+  margin: 2rem;
 }
 
 .menu-btn span {
@@ -237,26 +281,13 @@ main {
   transform: translate(-50%, -50%) rotate(-45deg);
 }
 
-li a {
-  text-decoration: none;
-  color: #000;
-}
-
-li a:hover {
-  color: #203239;
-}
-
-li {
-  padding: 1rem;
-}
 /*-------------------------------------
  . Dark/Light Mode
 --------------------------------------*/
 
 .dark-mode {
-  align-self: end;
-  justify-self: end;
-  margin: 0 3rem 0.2rem 0;
+  display: flex;
+  align-items: center;
 }
 
 .checkbox {
@@ -306,10 +337,11 @@ li {
 
 footer {
   grid-area: footer;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, 0);
+}
+
+footer p {
+  display: flex;
+  justify-content: center;
   font-size: clamp(0.8rem, 1.5vw, 1.5rem);
 }
 
@@ -321,7 +353,7 @@ footer {
   .menu-btn {
     display: block;
   }
-  .header-links {
+  .navigation {
     display: none;
   }
 
@@ -330,5 +362,39 @@ footer {
     justify-self: center;
     margin: 0;
     display: none;
+  }
+
+  .welcome {
+    align-self: center;
+  }
+
+  .header {
+    border: none;
+  }
+
+  .navigation ul {
+    display: block;
+  }
+
+  .navigation a {
+    padding: 1rem;
+    margin: 1rem;
+  }
+
+  .navigation.active {
+    width: 50%;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    background-color: #000000b7;
+    background-image: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+  }
+
+  footer {
+    background-color: #00000093;
   }
 }
