--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,6 @@ header { */
 
 main {
   grid-area: main;
-  justify-content: center;
-  display: flex;
 }
 
 .logo {
@@ -136,6 +134,8 @@ main {
 }
 .menu-container {
   grid-area: menu-container;
+  display: grid;
+  gap: 1rem;
 }
 
 .menu-header {
@@ -155,8 +155,8 @@ main {
 }
 
 .menu-item img {
-  width: 50px;
-  height: 50px;
+  /* width: 50px; */
+  max-height: 150px;
   object-fit: cover;
   border-radius: 10px;
 }
@@ -187,7 +187,6 @@ main {
 }
 
 .navigation {
-  font-size: 1.5rem;
   transition: 0.3s ease;
   display: flex;
   gap: 0.5rem;
