--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,11 @@ main {
   background-color: #ffffff7a;
 }
 
+.filters a.active {
+  color: white;
+  background-color: #007bff; /* Blue or any color of your choice */
+}
+
 .filters button {
   margin: 5px;
   padding: 10px 15px;
@@ -235,6 +240,11 @@ main {
   justify-content: center;
   display: flex;
   border-radius: 10px;
+}
+
+.navigation a.active {
+  color: white;
+  background-color: #007bff; /* Blue or any color of your choice */
 }
 
 /* .navigation.active {
