--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,12 @@
 
 html {
   scroll-behavior: smooth;
-  width: 100%;
+  /*   width: 100%;
+  height: 100%; */
+}
+
+html,
+body {
   height: 100%;
 }
 
@@ -45,8 +50,7 @@ body {
     "header"
     "main"
     "footer";
-  min-width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .header {
@@ -54,21 +58,12 @@ body {
   align-items: flex-end;
   grid-area: header;
   background: linear-gradient(
-    66deg,
-    rgb(159 159 159) 0%,
-    rgb(9 9 121 / 33%) 35%,
-    rgb(255 255 255 / 23%) 100%
+    233deg,
+    rgb(128 155 208) 0%,
+    rgb(158 158 245 / 33%) 35%,
+    rgb(0 0 0 / 71%) 100%
   );
 }
-/* 
-header { */
-/*   grid-area: header; */
-
-/*   display: flex; */
-/*   flex-direction: row-reverse; */
-/*   align-items: flex-end; */
-/*   justify-content: space-between; */
-/* } */
 
 main {
   grid-area: main;
@@ -80,6 +75,8 @@ main {
   max-width: 300px;
   max-height: 170px;
   justify-self: end;
+  padding-top: 1rem;
+  padding-left: 1rem;
 }
 
 .welcome {
@@ -106,9 +103,9 @@ main {
 .filters a {
   color: #ffffff;
   font-size: clamp(1rem, 2vw, 2rem);
-  border: solid 1px rgb(255, 255, 255);
+  border: solid 1px rgba(255, 255, 255, 0.301);
   background-color: #000000;
-  padding: 0.5rem;
+  padding: 0.2rem;
   border-radius: 10px;
   transition-duration: 0.4s;
 }
@@ -137,7 +134,7 @@ main {
 .filters button:hover {
   background-color: #c9302c;
 }
-
+/* 
 .menu-content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -147,9 +144,9 @@ main {
     "header"
     "menu-container";
   margin: 1.5rem;
-}
+} */
 .menu-container {
-  grid-area: menu-container;
+  /*   grid-area: menu-container; */
   display: grid;
   gap: 1rem;
 }
@@ -223,6 +220,7 @@ main {
 .navigation ul {
   gap: 0.5rem;
   display: flex;
+  padding: 0.5rem;
 }
 
 .navigation a {
@@ -242,19 +240,6 @@ main {
   color: white;
   background-color: #007bff; /* Blue or any color of your choice */
 }
-
-/* .navigation.active {
-  width: 50%;
-  height: 100%;
-  left: 0;
-  position: absolute;
-  background-color: #000000;
-  background-image: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 1rem;
-} */
 
 .menu-btn {
   height: 50px;
