--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,6 @@
 
 html {
   scroll-behavior: smooth;
-  /*   width: 100%;
-  height: 100%; */
 }
 
 html,
@@ -40,115 +38,84 @@ body {
 --------------------------------------*/
 .wrapper {
   display: grid;
-  background-image: url(../img/header.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: url(../img/header.jpg) center/cover no-repeat;
   grid-template-columns: auto;
   grid-template-rows: auto 1fr auto;
-  grid-template-areas:
-    "header"
-    "main"
-    "footer";
+  grid-template-areas: "header" "main" "footer";
   height: 100vh;
+  background-color: #000;
 }
 
 .header {
-  border-bottom: solid 0.1rem #ffffff81;
-  align-items: flex-end;
   grid-area: header;
-  background: linear-gradient(
-    233deg,
-    rgb(128 155 208) 0%,
-    rgb(158 158 245 / 33%) 35%,
-    rgb(0 0 0 / 71%) 100%
-  );
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: row-reverse;
 }
 
 main {
   grid-area: main;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+}
+
+.our-history {
+  background-color: #000000cc;
+  padding: 2rem;
 }
 
 .logo {
-  max-width: 300px;
-  max-height: 170px;
-  justify-self: end;
-  padding-top: 1rem;
-  padding-left: 1rem;
+  max-height: 150px;
+  padding: 1rem;
 }
 
 .welcome {
   font-family: "Style Script";
   color: #fff;
-  font-size: clamp(2rem, 5vw, 5rem);
+  font-size: clamp(1.8rem, 4vw, 4rem);
 }
-
-/*-------------------------------------
- 4. Section
---------------------------------------*/
+.about-txt {
+  font-size: clamp(0.8rem, 1.2vw, 1.2rem);
+  color: #fff;
+  font-family: inherit;
+}
 
 /*-------------------------------------
  . Menu section
 --------------------------------------*/
-
+/* Header */
 .filters {
   justify-content: center;
   display: flex;
   gap: 1rem;
   transition: 0.3s ease;
+  padding: 1rem;
 }
 
 .filters a {
-  color: #ffffff;
+  color: #fff;
   font-size: clamp(1rem, 2vw, 2rem);
   border: solid 1px rgba(255, 255, 255, 0.301);
-  background-color: #000000;
+  background-color: #000;
   padding: 0.2rem;
   border-radius: 10px;
   transition-duration: 0.4s;
 }
 
 .filters a:hover {
-  background-color: #ffffff7a;
+  background: rgba(255, 255, 255, 0.48);
 }
 
 .filters a.active {
-  color: white;
-  background-color: #007bff; /* Blue or any color of your choice */
+  background-color: #007bff;
 }
 
-.filters button {
-  margin: 5px;
-  padding: 10px 15px;
-  font-size: 14px;
-  cursor: pointer;
-  border: none;
-  background-color: #d9534f;
-  color: white;
-  border-radius: 5px;
-  transition: 0.3s;
-}
-
-.filters button:hover {
-  background-color: #c9302c;
-}
-/* 
-.menu-content {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 15px;
-  max-width: 1000px;
-  grid-template-areas:
-    "header"
-    "menu-container";
-  margin: 1.5rem;
-} */
 .menu-container {
-  /*   grid-area: menu-container; */
   display: grid;
   gap: 1rem;
+  justify-content: center;
 }
 
 .menu-header {
@@ -187,34 +154,63 @@ main {
   font-size: 16px;
 }
 
+.price-buy {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 /*-------------------------------------
- . Navigaton menu
+ . Navigation Menu
 --------------------------------------*/
 
-.navigation a:hover {
-  background-color: #ffffff7a;
+.nav-btn {
+  font-size: clamp(1rem, 2vw, 2rem);
+  border: none;
+  background: none;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+}
+
+.nav-btn::before {
+  margin-left: auto;
+}
+
+.nav-btn::after,
+.nav-btn::before {
+  content: "";
+  width: 0%;
+  height: 2px;
+  background: rgb(43, 76, 226);
+  display: block;
+  transition: 0.5s;
+}
+
+.nav-btn:hover::after,
+.nav-btn:hover::before {
+  width: 100%;
+}
+
+.nav-btn.active::after,
+.nav-btn.active::before {
+  width: 100%;
+}
+
+.nav-btn.active {
+  border: 1px solid rgb(43, 76, 226); /* Add border with color */
 }
 
 .navigation {
-  transition: 0.3s ease;
   display: flex;
   gap: 0.5rem;
   flex-direction: row-reverse;
-  font-family: "open sans";
 }
 
 .navigation li {
-  list-style: none;
-}
-
-.navigation li a {
-  text-decoration: none;
-  color: #ffffff;
-  cursor: pointer;
-}
-
-.navigation li a:hover {
-  color: #203239;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1rem;
 }
 
 .navigation ul {
@@ -223,23 +219,9 @@ main {
   padding: 0.5rem;
 }
 
-.navigation a {
-  /*   text-decoration: none; */
-  color: #fff;
-  border: solid 0.1rem #ffffff80;
-  padding: 1px 10px 1px 10px;
-  background-color: #000000cb;
-  font-size: clamp(1rem, 2vw, 2rem);
-  transition-duration: 0.4s;
-  justify-content: center;
-  display: flex;
-  border-radius: 10px;
-}
-
-.navigation a.active {
-  color: white;
-  background-color: #007bff; /* Blue or any color of your choice */
-}
+/*-------------------------------------
+ . Hamburger Menu
+--------------------------------------*/
 
 .menu-btn {
   height: 50px;
@@ -363,22 +345,6 @@ footer p {
     display: none;
   }
 
-  .logo {
-    align-self: center;
-    justify-self: center;
-    margin: 0;
-    display: none;
-  }
-
-  .welcome {
-    justify-self: center;
-    align-self: end;
-  }
-
-  .header {
-    border: none;
-  }
-
   .navigation ul {
     display: block;
   }
@@ -389,7 +355,6 @@ footer p {
   }
 
   .navigation.active {
-    width: 50%;
     height: 100%;
     left: 0;
     position: absolute;
@@ -399,12 +364,46 @@ footer p {
     flex-direction: column;
     justify-content: center;
     gap: 1rem;
+    overflow-y: auto;
   }
   .dark-mode {
     flex-direction: column;
   }
 
+  main {
+    height: 100vh;
+    overflow: scroll;
+    display: flex;
+  }
+  .filters {
+    padding: 0.3rem 0 1rem 0;
+  }
+
   #main-content {
     align-self: center;
+    display: block;
+  }
+
+  .menu-container {
+    padding: 0 2rem 0 2rem;
+  }
+
+  .our-history {
+    max-height: 100vh;
+    overflow: scroll;
+  }
+  .about-txt {
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+  }
+
+  .menu-btn {
+    background: firebrick;
+    padding: 2rem;
+  }
+
+  footer {
+    position: absolute;
+    bottom: 0;
   }
 }
