--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body {
   grid-template-areas: "header" "main" "footer";
   height: 100vh;
   background-color: #000;
+  overflow: scroll;
 }
 
 .header {
@@ -79,16 +80,36 @@ main {
   font-family: inherit;
 }
 
-.basket-section {
-  grid-area: basket;
-  background: #fff;
-  max-width: 300px;
-  max-height: 200px;
+/*-------------------------------------
+ . Basket
+--------------------------------------*/
+#basket-button {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
+  padding: 10px;
+  cursor: pointer;
+  border: none;
+  background: none;
 }
 
+#basket-button i {
+  margin-right: 8px;
+}
+.fa-cart-shopping {
+  font-size: 2rem;
+  color: #fff;
+}
+
+.basket-item {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 0;
+}
+
+.basket-total {
+  font-weight: bold;
+  padding-top: 10px;
+}
 /*-------------------------------------
  . Menu section
 --------------------------------------*/
@@ -99,11 +120,12 @@ main {
   gap: 1rem;
   transition: 0.3s ease;
   padding: 1rem;
+  font-size: clamp(1rem, 2vw, 2rem);
 }
 
 .filters a {
   color: #fff;
-  font-size: clamp(1rem, 2vw, 2rem);
+
   border: solid 1px rgba(255, 255, 255, 0.301);
   background-color: #000;
   padding: 0.2rem;
@@ -353,6 +375,8 @@ footer p {
 @media (max-width: 768px) {
   .menu-btn {
     display: block;
+    position: absolute;
+    bottom: 0;
   }
   .navigation {
     display: none;
@@ -395,12 +419,8 @@ footer p {
     margin-top: 2rem;
     margin-bottom: 3rem;
   }
-  main {
-    overflow: scroll;
-  }
 
-  footer {
-    position: absolute;
-    bottom: 0;
+  footer p {
+    background-color: #000000cc;
   }
 }
