--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ body {
   background-color: #000;
 }
 
+#daily-button,
 .checkout-btn,
 .nav-btn,
 .filters a,
@@ -52,6 +53,23 @@ body {
 .navigation.active,
 .popup-content {
   background-color: #fff;
+}
+
+:where(.fa-square-plus, .fa-circle-xmark, .fa-trash):active {
+  transform: scale(1.3);
+}
+
+.checkout-btn:active {
+  transform: scale(1.1);
+}
+
+:where(#daily-button, #basket-button):hover {
+  transform: scale(1.3);
+}
+
+#daily-button,
+#basket-button {
+  transition: all 0.3s linear;
 }
 
 /*-------------------------------------
@@ -102,19 +120,21 @@ main {
 /*-------------------------------------
  . Basket
 --------------------------------------*/
+#daily-button,
 #basket-button {
   display: flex;
-  align-items: center;
   padding: 10px;
   cursor: pointer;
   border: none;
   background: none;
 }
 
-#basket-button i {
-  margin-right: 8px;
+#daily-button {
+  display: flex;
+  flex-direction: column;
 }
 
+.fa-utensils,
 .fa-basket-shopping {
   font-size: 2rem;
 }
@@ -160,7 +180,10 @@ main {
 
 .aside-menu {
   grid-area: basket;
-  justify-self: center;
+  align-items: center;
+  display: flex;
+  gap: 2rem;
+  flex-direction: column;
 }
 
 .popup {
@@ -210,10 +233,10 @@ main {
 
 .clear-button {
   font-size: 2rem;
-  display: grid;
+  display: flex;
+  justify-content: flex-end;
   border: none;
   background: none;
-  justify-self: end;
 }
 .checkout-btn {
   padding: 0.5rem;
@@ -225,7 +248,7 @@ main {
 /*-------------------------------------
  . Menu section
 --------------------------------------*/
-/* Header */
+
 .filters {
   justify-content: center;
   display: flex;
@@ -471,6 +494,8 @@ main {
 .popup-content.dark {
   background-color: #000;
 }
+
+#daily-button.dark,
 footer.dark,
 .span.dark,
 .nav-btn.dark,
@@ -555,6 +580,11 @@ footer p {
   .about-txt {
     margin-top: 2rem;
     margin-bottom: 3rem;
+  }
+
+  footer p {
+    position: relative;
+    bottom: 0;
   }
 }
 
