--- a/css/style.css
+++ b/css/style.css
@@ -545,7 +545,7 @@ footer p {
   }
 
   .navigation.active {
-    height: 100%;
+    height: 100vh;
     left: 0;
     position: absolute;
     background-image: none;
