--- a/css/style.css
+++ b/css/style.css
@@ -553,7 +553,7 @@ footer p {
     flex-direction: column;
     justify-content: center;
     gap: 1rem;
-    overflow-y: auto;
+    /* overflow-y: auto; */
   }
 
   #dark-mode {
