--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
 .item-circle {
   color: #fff;
 }
-
+.menu-item,
 .lunch-content,
 .navigation.active,
 .popup-content {
@@ -71,6 +71,22 @@ body {
 #daily-button,
 #basket-button {
   transition: all 0.3s linear;
+}
+
+:where(.menu-item) h2 {
+  font-size: clamp(1.2rem, 2vw, 2rem);
+}
+
+:where(.menu-item) p {
+  font-size: clamp(1rem, 1.8vw, 1.8rem);
+}
+
+.price {
+  font-size: clamp(1rem, 1.8vw, 1.8rem);
+}
+
+.filters a {
+  font-size: clamp(1.5rem, 2vw, 2rem);
 }
 
 /*-------------------------------------
@@ -101,19 +117,28 @@ main {
 }
 
 .our-history {
+  display: grid;
+  max-width: 2000px;
   padding: 2rem;
 }
 
+#main-content {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 .logo {
-  max-height: 170px;
+  width: clamp(150px, 50vw, 400px);
 }
 
 .welcome {
   font-family: "Style Script";
   font-size: clamp(1.8rem, 4vw, 4rem);
 }
+
 .about-txt {
-  font-size: clamp(0.8rem, 1.2vw, 1.2rem);
+  font-size: clamp(1rem, 1.5vw, 1.5rem);
   font-family: inherit;
 }
 
@@ -130,13 +155,12 @@ main {
 }
 
 #daily-button {
-  display: flex;
   flex-direction: column;
 }
 
 .fa-utensils,
 .fa-basket-shopping {
-  font-size: 2rem;
+  font-size: clamp(2rem, 4vw, 4rem);
 }
 
 .basket-item {
@@ -274,7 +298,7 @@ main {
   display: grid;
   gap: 1rem;
   justify-content: center;
-  max-width: 300px;
+  max-width: 1000px;
 }
 
 .menu-item {
@@ -282,7 +306,7 @@ main {
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
-  border: 1px solid #000;
+  border: 1px solid #00000093;
 }
 
 .menu-header {
@@ -290,25 +314,22 @@ main {
 }
 
 .menu-item img {
-  max-height: 150px;
+  width: clamp(150px, 50vw, 400px);
   object-fit: cover;
   border-radius: 10px;
 }
 
 .menu-item h2 {
   margin: 10px 0;
-  font-size: 18px;
 }
 
 .menu-item p {
-  font-size: 14px;
   margin-bottom: 10px;
 }
 
 .price {
   font-weight: bold;
   color: rgb(43, 76, 226);
-  font-size: 16px;
 }
 
 .price-buy {
@@ -332,8 +353,6 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  /*   z-index: 9999;
-  animation: fadeIn 0.3s ease-in-out; */
 }
 
 .lunch-content {
@@ -585,6 +604,10 @@ footer p {
     bottom: 0;
   }
 
+  .our-history {
+    padding: 1rem;
+  }
+
   .header.dark {
     border: none;
   }
@@ -690,10 +713,6 @@ footer p {
 
   .checkout-btn {
     padding: 0.3rem 1rem;
-  }
-  .menu-btn {
-    position: fixed;
-    z-index: 1001;
   }
 
   .logo {
