--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,13 @@ body {
 
 body {
   font-family: "Poppins";
-  color: #000;
 }
 
-.menu-btn span {
-  background-color: #000;
-}
-
+/*-------------------------------------
+ 2. Colors
+--------------------------------------*/
+body,
+.submit-btn,
 #daily-button,
 .checkout-btn,
 .nav-btn,
@@ -56,6 +56,14 @@ body {
   background-color: #fff;
 }
 
+.menu-btn span {
+  background-color: #000;
+}
+
+/*-------------------------------------
+ 2. Effects
+--------------------------------------*/
+
 :where(.fa-square-plus, .fa-circle-xmark, .fa-trash):active {
   transform: scale(1.3);
 }
@@ -73,11 +81,15 @@ body {
   transition: all 0.3s linear;
 }
 
-:where(.menu-item) h2 {
+/*-------------------------------------
+ 2. Font sizes
+--------------------------------------*/
+
+:where(.menu-item, .contact-header) h2 {
   font-size: clamp(1.2rem, 2vw, 2rem);
 }
 
-:where(.menu-item) p {
+:where(.menu-item, .contact-header) p {
   font-size: clamp(1rem, 1.8vw, 1.8rem);
 }
 
@@ -450,6 +462,25 @@ main {
   padding: 0.5rem;
 }
 
+/*-------------------------------------
+ . Contact-Form
+--------------------------------------*/
+.contact-section {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
 /*-------------------------------------
  . Hamburger Menu
 --------------------------------------*/
