--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ main {
 }
 
 .logo {
-  width: clamp(150px, 50vw, 400px);
+  width: clamp(150px, 50vw, 200px);
 }
 
 .welcome {
@@ -326,7 +326,7 @@ main {
 }
 
 .menu-item img {
-  width: clamp(150px, 50vw, 400px);
+  width: clamp(150px, 50vw, 200px);
   object-fit: cover;
   border-radius: 10px;
 }
@@ -591,6 +591,7 @@ main {
 
 .menu-item.dark {
   border: 1px solid #fff;
+  background-color: #000;
 }
 .ball.dark,
 .navigation.active.dark,
